# PersianSubtitleFixer

./: Cargo.toml  FixPersianSubtitle.pro  Makefile  README.md  WARP.md  about.cpp  about.h  about.ui  form1.cpp  form1.h  form1.ui  index.html  main.cpp  params.json  resources.qrc
src/: app.rs  encoding.rs  main.rs
